{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 33,
  "lineage": "ff2c57c7-0098-2e18-ebf0-6235c88b479c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d66ed5196c5cca3",
            "arn": "arn:aws:ec2:us-east-1:497986631333:elastic-ip/eipalloc-01d66ed5196c5cca3",
            "domain": "vpc",
            "id": "eipalloc-01d66ed5196c5cca3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-211-68-142.compute-1.amazonaws.com",
            "public_ip": "18.211.68.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-nat-eip-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0809a5f2d3a88fd3b",
            "arn": "arn:aws:ec2:us-east-1:497986631333:elastic-ip/eipalloc-0809a5f2d3a88fd3b",
            "domain": "vpc",
            "id": "eipalloc-0809a5f2d3a88fd3b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-86-248-126.compute-1.amazonaws.com",
            "public_ip": "98.86.248.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-nat-eip-2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:497986631333:internet-gateway/igw-0d023ec65db741e3d",
            "id": "igw-0d023ec65db741e3d",
            "owner_id": "497986631333",
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-igw"
            },
            "vpc_id": "vpc-0ae8685b2c34a4831"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:497986631333:loadbalancer/app/fiap-vehicle-sales-alb/b0390b492b3c21ca",
            "arn_suffix": "app/fiap-vehicle-sales-alb/b0390b492b3c21ca",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fiap-vehicle-sales-alb-544721435.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:497986631333:loadbalancer/app/fiap-vehicle-sales-alb/b0390b492b3c21ca",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fiap-vehicle-sales-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05b21342a92dbf7b7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-052029e549aa6bf2f"
              },
              {
                "subnet_id": "subnet-0aaef4fb7870499b0"
              }
            ],
            "subnets": [
              "subnet-052029e549aa6bf2f",
              "subnet-0aaef4fb7870499b0"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-alb"
            },
            "vpc_id": "vpc-0ae8685b2c34a4831",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:497986631333:listener/app/fiap-vehicle-sales-alb/b0390b492b3c21ca/2d7dc245fa1d840d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:497986631333:targetgroup/fiap-vehicle-sales-tg/2c30e3aeede66715",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:497986631333:listener/app/fiap-vehicle-sales-alb/b0390b492b3c21ca/2d7dc245fa1d840d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:497986631333:loadbalancer/app/fiap-vehicle-sales-alb/b0390b492b3c21ca",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:497986631333:targetgroup/fiap-vehicle-sales-tg/2c30e3aeede66715",
            "arn_suffix": "targetgroup/fiap-vehicle-sales-tg/2c30e3aeede66715",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:497986631333:targetgroup/fiap-vehicle-sales-tg/2c30e3aeede66715",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fiap-vehicle-sales-tg",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-tg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ae8685b2c34a4831"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d66ed5196c5cca3",
            "association_id": "eipassoc-068640de9b092dc71",
            "connectivity_type": "public",
            "id": "nat-0c089492da05c4ea7",
            "network_interface_id": "eni-0b31c29aa207d96cb",
            "private_ip": "10.1.1.31",
            "public_ip": "18.211.68.142",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aaef4fb7870499b0",
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-nat-gateway-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-nat-gateway-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0809a5f2d3a88fd3b",
            "association_id": "eipassoc-03d08c03ba4854748",
            "connectivity_type": "public",
            "id": "nat-0741cc5575f29dd47",
            "network_interface_id": "eni-04ea53742e86d67f3",
            "private_ip": "10.1.2.150",
            "public_ip": "98.86.248.126",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-052029e549aa6bf2f",
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-nat-gateway-2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-nat-gateway-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:497986631333:route-table/rtb-09dc4b08a47fe054b",
            "id": "rtb-09dc4b08a47fe054b",
            "owner_id": "497986631333",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c089492da05c4ea7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-private-rt-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae8685b2c34a4831"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:497986631333:route-table/rtb-03de2ff986d4538e8",
            "id": "rtb-03de2ff986d4538e8",
            "owner_id": "497986631333",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0741cc5575f29dd47",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-private-rt-2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae8685b2c34a4831"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:497986631333:route-table/rtb-037533ddfb4b1c1ce",
            "id": "rtb-037533ddfb4b1c1ce",
            "owner_id": "497986631333",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d023ec65db741e3d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae8685b2c34a4831"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fb05bcee220f05a",
            "route_table_id": "rtb-09dc4b08a47fe054b",
            "subnet_id": "subnet-0603a33291b1a895e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed2eaab56fb5d0f0",
            "route_table_id": "rtb-03de2ff986d4538e8",
            "subnet_id": "subnet-0eb1166a52e059d0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b2dff3dd9d3abd8",
            "route_table_id": "rtb-037533ddfb4b1c1ce",
            "subnet_id": "subnet-0aaef4fb7870499b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008c43fc0e75e8bd6",
            "route_table_id": "rtb-037533ddfb4b1c1ce",
            "subnet_id": "subnet-052029e549aa6bf2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:497986631333:security-group/sg-05b21342a92dbf7b7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b21342a92dbf7b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "fiap-vehicle-sales-alb-20250825014428946500000002",
            "name_prefix": "fiap-vehicle-sales-alb-",
            "owner_id": "497986631333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-alb-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae8685b2c34a4831"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:497986631333:security-group/sg-0b3b2331c09b6b567",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound internet access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3b2331c09b6b567",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "inbound from ALB",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b21342a92dbf7b7"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "fiap-vehicle-sales-ecs-tasks-20250825014432447600000004",
            "name_prefix": "fiap-vehicle-sales-ecs-tasks-",
            "owner_id": "497986631333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae8685b2c34a4831"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:497986631333:security-group/sg-0f4483178ba1ce456",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f4483178ba1ce456",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3b2331c09b6b567"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "fiap-vehicle-sales-rds-20250825014435423900000005",
            "name_prefix": "fiap-vehicle-sales-rds-",
            "owner_id": "497986631333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-rds-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae8685b2c34a4831"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:497986631333:subnet/subnet-0603a33291b1a895e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0603a33291b1a895e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "497986631333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-private-subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ae8685b2c34a4831"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:497986631333:subnet/subnet-0eb1166a52e059d0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb1166a52e059d0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "497986631333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-private-subnet-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ae8685b2c34a4831"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:497986631333:subnet/subnet-0aaef4fb7870499b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaef4fb7870499b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "497986631333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-public-subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ae8685b2c34a4831"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:497986631333:subnet/subnet-052029e549aa6bf2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052029e549aa6bf2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "497986631333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-public-subnet-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ae8685b2c34a4831"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:497986631333:vpc/vpc-0ae8685b2c34a4831",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0021b4eac908766ef",
            "default_route_table_id": "rtb-0001d9e95a8cfc3f4",
            "default_security_group_id": "sg-096ead8ca3d0a4ec3",
            "dhcp_options_id": "dopt-0bd15f7c3a6390123",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ae8685b2c34a4831",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0001d9e95a8cfc3f4",
            "owner_id": "497986631333",
            "tags": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "fiap-vehicle-sales-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}